[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "luna-ova"
version = "0.1.0"
description = "Python interface for controlling Luna OVA instruments via TCP/IP"
readme = "README.md"
authors = [{name = "bongkokwei", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0"
]
plot = [
    "matplotlib>=3.3.0"
]

[project.urls]
Homepage = "https://github.com/bongkokwei/luna-ova"
Repository = "https://github.com/bongkokwei/luna-ova"

[tool.setuptools]
py-modules = ["luna_ova"]